--- a/integrations/whatsapp/package.json
+++ b/integrations/whatsapp/package.json
@@ -16,6 +16,7 @@
     "@botpress/client": "workspace:*",
     "@botpress/sdk": "workspace:*",
     "@botpress/sdk-addons": "workspace:*",
+    "@segment/analytics-node": "^2.2.0",
     "axios": "^1.6.2",
     "preact": "^10.23.1",
     "preact-render-to-string": "^6.5.7",
