chore(integrations/gmail): add react and react email

--- a/integrations/gmail/tsconfig.json
+++ b/integrations/gmail/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "jsx": "react-jsx",
+    "jsxImportSource": "react",
+    "lib": ["DOM"],
     "baseUrl": ".",
     "outDir": "dist"
   },
