chore(integrations): add bp lint to all integrations

--- a/integrations/browser/package.json
+++ b/integrations/browser/package.json
@@ -2,6 +2,7 @@
   "name": "@botpresshub/browser",
   "scripts": {
     "check:type": "tsc --noEmit",
+    "check:bplint": "pnpm bp lint",
     "build": "pnpm bp build",
     "add:interfaces": "echo 'no interfaces to add'"
   },
