--- a/integrations/vonage/package.json
+++ b/integrations/vonage/package.json
@@ -7,6 +7,7 @@
     "build": "pnpm bp build",
     "deploy": "pnpm bp deploy",
     "check:type": "tsc --noEmit",
+    "check:bplint": "pnpm bp lint",
     "add:interfaces": "echo 'no interfaces to add'"
   },
   "keywords": [],
