--- a/integrations/webhook/package.json
+++ b/integrations/webhook/package.json
@@ -8,6 +8,7 @@
     "deploy": "pnpm bp deploy",
     "login": "pnpm bp login",
     "check:type": "tsc --noEmit",
+    "check:bplint": "pnpm bp lint",
     "add:interfaces": "echo 'no interfaces to add'"
   },
   "keywords": [],
