--- a/.github/workflows/run-checks.yml
+++ b/.github/workflows/run-checks.yml
@@ -16,8 +16,5 @@ jobs:
       - uses: actions/checkout@v2
       - name: Setup
         uses: ./.github/actions/setup
-      - run: pnpm run check:format
-      - run: pnpm run check:lint
-      - run: pnpm run check:type
-      - run: pnpm run check:dep
+      - run: pnpm run check
       - run: pnpm run test
