--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
     "build": "turbo build",
     "bump": "depsynky bump && pnpm -w install",
     "test": "pnpm vitest --run",
-    "check:bplint": "pnpm -r --stream check:bplint",
+    "check:integrationlint": "pnpm -r --stream check:integrationlint",
     "check:dep": "depsynky check",
     "check:format": "prettier --check .",
-    "check:lint": "eslint ./ --ext .ts --ext .tsx",
+    "check:eslint": "eslint ./ --ext .ts --ext .tsx",
+    "check:lint": "pnpm run check:integrationlint && pnpm run check:eslint",
     "check:type": "pnpm -r --stream check:type",
     "fix:dep": "depsynky sync",
     "fix:format": "prettier --write .",
     "fix:lint": "eslint --fix ./ --ext .ts --ext .tsx",
-    "check": "pnpm check:dep && pnpm check:format && pnpm check:lint && pnpm check:type && check:bplint",
+    "check": "pnpm check:dep && pnpm check:format && pnpm check:lint && pnpm check:type",
     "fix": "pnpm fix:dep && pnpm fix:format && pnpm fix:lint"
   },
   "dependencies": {
