--- a/integrations/todoist/package.json
+++ b/integrations/todoist/package.json
@@ -6,7 +6,7 @@
     "deploy": "pnpm bp deploy",
     "login": "pnpm bp login",
     "check:type": "tsc --noEmit",
-    "check:bplint": "pnpm bp lint",
+    "check:integrationlint": "pnpm bp lint",
     "add:interfaces": "bp add ../../interfaces/creatable -y"
   },
   "private": true,
