--- a/bots/sinlin/package.json
+++ b/bots/sinlin/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "postinstall": "genenv -o ./.genenv/index.ts -e SINLIN_TELEGRAM_BOT_TOKEN -e SINLIN_LINEAR_API_KEY -e SINLIN_LINEAR_WEBHOOK_SIGNING_SECRET",
     "check:type": "tsc --noEmit",
+    "check:botlint": "bp lint",
     "build": "bp build",
     "add:integrations": "bp add ../../integrations/linear -y && bp add ../../integrations/telegram -y"
   },
