--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
     "build": "turbo build",
     "bump": "depsynky bump && pnpm -w install",
     "test": "pnpm vitest --run",
-    "check:integrationlint": "pnpm -r --stream check:integrationlint",
+    "check:botlint": "pnpm -r --filter \"./bots/**\" --stream check:botlint",
+    "check:integrationlint": "pnpm -r --filter \"./integrations/**\" --stream check:integrationlint",
+    "check:interfacelint": "pnpm -r --filter \"./interfaces/**\" --stream check:interfacelint",
     "check:dep": "depsynky check",
     "check:format": "prettier --check .",
     "check:eslint": "eslint ./ --ext .ts --ext .tsx",
-    "check:lint": "pnpm run check:integrationlint && pnpm run check:eslint",
+    "check:lint": "pnpm run check:integrationlint && pnpm run check:botlint && pnpm run check:interfacelint && pnpm run check:eslint",
     "check:type": "pnpm -r --stream check:type",
     "fix:dep": "depsynky sync",
     "fix:format": "prettier --write .",
