--- a/bots/sheetzy/package.json
+++ b/bots/sheetzy/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "postinstall": "genenv -o ./.genenv/index.ts -e SHEETZY_TELEGRAM_BOT_TOKEN -e SHEETZY_GSHEETS_CLIENT_EMAIL -e SHEETZY_GSHEETS_PRIVATE_KEY -e SHEETZY_GSHEETS_SPREADSHEET_ID",
     "check:type": "tsc --noEmit",
-    "check:botlint": "bp lint",
+    "check:bplint": "pnpm exec bp lint",
     "build": "bp build",
     "add:integrations": "bp add ../../integrations/gsheets -y && bp add ../../integrations/telegram -y"
   },
