--- a/integrations/linear/package.json
+++ b/integrations/linear/package.json
@@ -6,7 +6,7 @@
     "build": "pnpm bp build",
     "login": "pnpm bp login",
     "check:type": "tsc --noEmit",
-    "check:integrationlint": "pnpm bp lint",
+    "check:bplint": "pnpm exec bp lint",
     "add:interfaces": "bp add ../../interfaces/listable -y"
   },
   "keywords": [],
