--- a/integrations/slack/package.json
+++ b/integrations/slack/package.json
@@ -6,7 +6,7 @@
     "build": "pnpm bp build",
     "deploy": "pnpm bp deploy",
     "check:type": "tsc --noEmit",
-    "check:integrationlint": "pnpm bp lint",
+    "check:bplint": "pnpm exec bp lint",
     "check:format": "prettier --check .",
     "fix:format": "prettier --write .",
     "check:lint": "eslint ./ --ext .ts --ext .tsx",
