--- a/integrations/zapier/package.json
+++ b/integrations/zapier/package.json
@@ -8,7 +8,7 @@
     "login": "pnpm bp login",
     "deploy": "pnpm bp deploy",
     "check:type": "tsc --noEmit",
-    "check:integrationlint": "pnpm bp lint",
+    "check:bplint": "pnpm exec bp lint",
     "test": "jest",
     "add:interfaces": "echo 'no interfaces to add'"
   },
