--- a/interfaces/creatable/package.json
+++ b/interfaces/creatable/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "check:type": "tsc --noEmit",
-    "check:interfacelint": "bp lint",
+    "check:bplint": "pnpm exec bp lint",
     "deploy": "pnpm bp deploy"
   },
   "license": "MIT",
