--- a/integrations/pdf-generator/package.json
+++ b/integrations/pdf-generator/package.json
@@ -2,6 +2,7 @@
   "name": "@botpresshub/pdf-generator",
   "scripts": {
     "check:type": "tsc --noEmit",
+    "check:bplint": "pnpm exec bp lint",
     "build": "pnpm bp build",
     "add:interfaces": "echo 'no interfaces to add'"
   },
