--- a/integrations/fireworks-ai/package.json
+++ b/integrations/fireworks-ai/package.json
@@ -5,6 +5,7 @@
     "build": "pnpm bp build",
     "deploy": "pnpm bp deploy",
     "check:type": "tsc --noEmit",
+    "check:bplint": "pnpm exec bp lint",
     "add:interfaces": "bp add ../../interfaces/llm -y && bp add ../../interfaces/speech-to-text -y"
   },
   "private": true,
