--- a/integrations/todoist/package.json
+++ b/integrations/todoist/package.json
@@ -6,6 +6,7 @@
     "deploy": "pnpm bp deploy",
     "login": "pnpm bp login",
     "check:type": "tsc --noEmit",
+    "check:bplint": "pnpm exec bp lint",
     "add:interfaces": "bp add ../../interfaces/creatable -y"
   },
   "private": true,
