chore: add interfaces scripts are cross-plateform

--- a/integrations/linear/package.json
+++ b/integrations/linear/package.json
@@ -7,7 +7,7 @@
     "login": "pnpm bp login",
     "check:type": "tsc --noEmit",
     "check:bplint": "pnpm exec bp lint",
-    "add:interfaces": "bp add ../../interfaces/listable -y"
+    "add:interfaces": "ts-node -T ./interfaces.ts"
   },
   "keywords": [],
   "author": "",
