--- a/integrations/googlecalendar/package.json
+++ b/integrations/googlecalendar/package.json
@@ -7,7 +7,7 @@
     "deploy": "pnpm bp deploy",
     "check:type": "tsc --noEmit",
     "check:bplint": "pnpm exec bp lint",
-    "add:interfaces": "bp add ../../interfaces/creatable -y && bp add ../../interfaces/deletable -y && bp add ../../interfaces/listable -y && bp add ../../interfaces/readable -y && bp add ../../interfaces/updatable -y"
+    "add:interfaces": "ts-node -T ./interfaces.ts"
   },
   "keywords": [],
   "author": "",
