--- a/integrations/groq/package.json
+++ b/integrations/groq/package.json
@@ -6,7 +6,7 @@
     "deploy": "pnpm bp deploy",
     "check:type": "tsc --noEmit",
     "check:bplint": "pnpm exec bp lint",
-    "add:interfaces": "bp add ../../interfaces/llm -y && bp add ../../interfaces/speech-to-text -y"
+    "add:interfaces": "ts-node -T ./interfaces.ts"
   },
   "private": true,
   "dependencies": {
