--- a/bots/hit-looper/package.json
+++ b/bots/hit-looper/package.json
@@ -5,7 +5,7 @@
     "check:type": "tsc --noEmit",
     "check:bplint": "pnpm exec bp lint",
     "build": "bp build",
-    "add:integrations": "bp add ../../integrations/telegram -y && bp add ../../integrations/zendesk -y"
+    "add:integrations": "ts-node -T ./integrations.ts"
   },
   "keywords": [],
   "private": true,
