--- a/bots/bugbuster/package.json
+++ b/bots/bugbuster/package.json
@@ -17,6 +17,7 @@
     "@bpinternal/genenv": "0.0.1",
     "@types/node": "^18.11.17",
     "execa": "^8.0.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "@botpress/common": "workspace:*"
   }
 }
