--- a/bots/sinlin/package.json
+++ b/bots/sinlin/package.json
@@ -20,6 +20,7 @@
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.17",
     "execa": "^8.0.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "@botpress/common": "workspace:*"
   }
 }
