--- a/integrations/asana/package.json
+++ b/integrations/asana/package.json
@@ -25,6 +25,7 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
     "@botpress/cli": "workspace:*",
-    "@botpress/client": "workspace:*"
+    "@botpress/client": "workspace:*",
+    "@botpress/common": "workspace:*"
   }
 }
