--- a/integrations/charts/package.json
+++ b/integrations/charts/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^18.11.17",
     "chart.js": "^3.9.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "@botpress/common": "workspace:*"
   }
 }
