--- a/integrations/googlecalendar/package.json
+++ b/integrations/googlecalendar/package.json
@@ -22,6 +22,7 @@
     "@botpress/cli": "workspace:*",
     "@types/node": "^18.11.17",
     "googleapis-common": "^7.0.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "@botpress/common": "workspace:*"
   }
 }
