--- a/integrations/mailchimp/package.json
+++ b/integrations/mailchimp/package.json
@@ -21,6 +21,7 @@
     "@types/mailchimp__mailchimp_marketing": "3.0.10",
     "@types/node": "^18.11.17",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "@botpress/common": "workspace:*"
   }
 }
