--- a/integrations/make/package.json
+++ b/integrations/make/package.json
@@ -21,6 +21,7 @@
     "@botpress/cli": "workspace:*",
     "@types/node": "^18.19.10",
     "ts-node": "^10.9.2",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "@botpress/common": "workspace:*"
   }
 }
