--- a/integrations/slack/package.json
+++ b/integrations/slack/package.json
@@ -34,6 +34,7 @@
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.17",
     "@types/verror": "^1.10.6",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "@botpress/common": "workspace:*"
   }
 }
