--- a/integrations/stripe/package.json
+++ b/integrations/stripe/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.17",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "@botpress/common": "workspace:*"
   }
 }
