--- a/integrations/trello/package.json
+++ b/integrations/trello/package.json
@@ -33,6 +33,7 @@
     "@sentry/cli": "^2.36.1",
     "@types/node": "^18.19.50",
     "ts-node": "^10.9.2",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "@botpress/common": "workspace:*"
   }
 }
