--- a/integrations/webchat/package.json
+++ b/integrations/webchat/package.json
@@ -22,6 +22,7 @@
     "@botpress/client": "workspace:*",
     "@sentry/cli": "^2.18.1",
     "@types/node": "^18.11.17",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "@botpress/common": "workspace:*"
   }
 }
