--- a/integrations/whatsapp/package.json
+++ b/integrations/whatsapp/package.json
@@ -31,6 +31,7 @@
     "esbuild": "^0.15.18",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "@botpress/common": "workspace:*"
   }
 }
