--- a/integrations/zendesk/package.json
+++ b/integrations/zendesk/package.json
@@ -24,6 +24,7 @@
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.17",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "@botpress/common": "workspace:*"
   }
 }
