chore: add dependencies scripts are cross-plateform (#13381)
Co-authored-by: Pascal Breton <pascal.breton@botpress.com>

--- a/bots/bugbuster/package.json
+++ b/bots/bugbuster/package.json
@@ -5,7 +5,7 @@
     "check:type": "tsc --noEmit",
     "check:bplint": "pnpm exec bp lint",
     "build": "bp build",
-    "add:integrations": "bp add ../../integrations/github -y && bp add ../../integrations/slack -y"
+    "add:integrations": "ts-node -T ./integrations.ts"
   },
   "private": true,
   "dependencies": {
@@ -17,6 +17,7 @@
     "@bpinternal/genenv": "0.0.1",
     "@types/node": "^18.11.17",
     "execa": "^8.0.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "@botpress/common": "workspace:*"
   }
 }
