--- a/integrations/googlecalendar/package.json
+++ b/integrations/googlecalendar/package.json
@@ -7,7 +7,7 @@
     "deploy": "pnpm bp deploy",
     "check:type": "tsc --noEmit",
     "check:bplint": "pnpm exec bp lint",
-    "add:interfaces": "bp add ../../interfaces/creatable -y && bp add ../../interfaces/deletable -y && bp add ../../interfaces/listable -y && bp add ../../interfaces/readable -y && bp add ../../interfaces/updatable -y"
+    "add:interfaces": "ts-node -T ./interfaces.ts"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +22,7 @@
     "@botpress/cli": "workspace:*",
     "@types/node": "^18.11.17",
     "googleapis-common": "^7.0.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "@botpress/common": "workspace:*"
   }
 }
