--- a/bots/hello-world/package.json
+++ b/bots/hello-world/package.json
@@ -6,7 +6,7 @@
     "check:type": "tsc --noEmit",
     "check:bplint": "pnpm exec bp lint",
     "build": "bp build",
-    "add:integrations": "bp add ../../integrations/whatsapp -y"
+    "add:integrations": "ts-node -T ./integrations.ts"
   },
   "dependencies": {
     "@botpress/cli": "workspace:*",
@@ -19,6 +19,7 @@
     "esbuild": "^0.15.18",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "@botpress/common": "workspace:*"
   }
 }
