--- a/integrations/linear/package.json
+++ b/integrations/linear/package.json
@@ -7,7 +7,7 @@
     "login": "pnpm bp login",
     "check:type": "tsc --noEmit",
     "check:bplint": "pnpm exec bp lint",
-    "add:interfaces": "bp add ../../interfaces/listable -y"
+    "add:interfaces": "ts-node -T ./interfaces.ts"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +25,7 @@
     "@botpress/cli": "workspace:*",
     "@sentry/cli": "^2.18.1",
     "@types/node": "^18.11.17",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "@botpress/common": "workspace:*"
   }
 }
