--- a/integrations/todoist/package.json
+++ b/integrations/todoist/package.json
@@ -7,7 +7,7 @@
     "login": "pnpm bp login",
     "check:type": "tsc --noEmit",
     "check:bplint": "pnpm exec bp lint",
-    "add:interfaces": "bp add ../../interfaces/creatable -y"
+    "add:interfaces": "ts-node -T ./interfaces.ts"
   },
   "private": true,
   "dependencies": {
@@ -22,6 +22,7 @@
     "@types/node": "^18.11.17",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "@botpress/common": "workspace:*"
   }
 }
