--- a/.github/actions/deploy-integrations/action.yml
+++ b/.github/actions/deploy-integrations/action.yml
@@ -31,6 +31,9 @@ input:
   gmail_secrets:
     description: 'Gmail secrets'
     required: false
+  gsheets_secrets:
+    description: 'Google Sheets secrets'
+    required: false
   linear_secrets:
     description: 'Linear secrets'
     required: false
@@ -119,6 +122,8 @@ runs:
             base_command="bp deploy -v -y --noBuild --public"
             if [ $integration == "gmail" ]; then
                 base_command="$base_command ${{ inputs.gmail_secrets }}"
+            elif [ $integration == "gsheets" ]; then
+                base_command="$base_command ${{ inputs.gsheets_secrets }}"
             elif [ $integration == "linear" ]; then
                 base_command="$base_command ${{ inputs.linear_secrets }}"
             elif [ $integration == "slack" ]; then
