--- a/integrations/trello/package.json
+++ b/integrations/trello/package.json
@@ -15,6 +15,7 @@
   "private": true,
   "dependencies": {
     "@botpress/client": "workspace:*",
+    "@botpress/common": "workspace:*",
     "@botpress/sdk": "workspace:*",
     "@botpress/sdk-addons": "workspace:*",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
