--- a/integrations/googledrive/package.json
+++ b/integrations/googledrive/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "googledrive",
+  "name": "@botpresshub/googledrive",
   "scripts": {
     "check:type": "tsc --noEmit",
     "login": "bp login",
     "start": "nodemon --watch \"./*\" --ext \"ts\" --exec \"bp deploy -y\"",
     "deploy": "bp deploy",
-    "build": "bp build"
+    "build": "bp build",
+    "add:interfaces": "echo 'no interfaces to add'"
   },
   "private": true,
   "dependencies": {
