--- a/.github/actions/deploy-integrations/action.yml
+++ b/.github/actions/deploy-integrations/action.yml
@@ -37,6 +37,9 @@ input:
   gsheets_secrets:
     description: 'Google Sheets secrets'
     required: false
+  googlecalendar_secrets:
+    description: 'Google Calendar secrets'
+    required: false
   linear_secrets:
     description: 'Linear secrets'
     required: false
@@ -129,6 +132,8 @@ runs:
                 base_command="$base_command ${{ inputs.gmail_secrets }}"
             elif [ $integration == "gsheets" ]; then
                 base_command="$base_command ${{ inputs.gsheets_secrets }}"
+            elif [ $integration == "googlecalendar" ]; then
+                base_command="$base_command ${{ inputs.googlecalendar_secrets }}"
             elif [ $integration == "linear" ]; then
                 base_command="$base_command ${{ inputs.linear_secrets }}"
             elif [ $integration == "slack" ]; then
