--- a/plugins/personality/package.json
+++ b/plugins/personality/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@botpresshub/logger",
+  "name": "@botpresshub/personality",
   "scripts": {
     "check:type": "tsc --noEmit",
     "build": "bp build",
-    "add:integrations": "echo 'no integrations to add'"
+    "add:integrations": "ts-node -T ./integrations.ts"
   },
   "private": true,
   "dependencies": {
