--- a/turbo.json
+++ b/turbo.json
@@ -566,19 +566,25 @@
         "@botpress/cli#build"
       ]
     },
-    "@botpresshub/logger#add:integrations": {},
+    "@botpresshub/logger#add:integrations": {
+      "dependsOn": ["@botpress/client#build", "@botpress/sdk#build", "@botpress/cli#build"]
+    },
     "@botpresshub/logger#build": {
       "inputs": ["plugin.definition.ts", "src/**"],
       "outputs": [".botpress/**"],
       "dependsOn": ["@botpress/client#build", "@botpress/sdk#build", "@botpress/cli#build"]
     },
-    "@botpresshub/analytics#add:integrations": {},
+    "@botpresshub/analytics#add:integrations": {
+      "dependsOn": ["@botpress/client#build", "@botpress/sdk#build", "@botpress/cli#build"]
+    },
     "@botpresshub/analytics#build": {
       "inputs": ["plugin.definition.ts", "src/**"],
       "outputs": [".botpress/**"],
       "dependsOn": ["@botpress/client#build", "@botpress/sdk#build", "@botpress/cli#build"]
     },
-    "@botpresshub/personality#add:integrations": {},
+    "@botpresshub/personality#add:integrations": {
+      "dependsOn": ["@botpress/client#build", "@botpress/sdk#build", "@botpress/cli#build"]
+    },
     "@botpresshub/personality#build": {
       "inputs": ["plugin.definition.ts", "src/**"],
       "outputs": [".botpress/**"],
