feat: implement personality plugin (#13452)

--- a/plugins/personality/package.json
+++ b/plugins/personality/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "@botpresshub/logger",
+  "name": "@botpresshub/personality",
   "scripts": {
     "check:type": "tsc --noEmit",
     "build": "bp build",
-    "add:integrations": "echo 'no integrations to add'"
+    "add:integrations": "ts-node -T ./integrations.ts"
   },
   "private": true,
   "dependencies": {
     "@botpress/client": "workspace:*",
-    "@botpress/sdk": "workspace:*"
+    "@botpress/sdk": "workspace:*",
+    "dedent": "^1.5.3",
+    "json5": "^2.2.3",
+    "jsonrepair": "^3.10.0",
+    "openai": "^4.53.0"
   },
   "devDependencies": {
     "@botpress/cli": "workspace:*",
+    "@botpress/common": "workspace:*",
     "@bpinternal/genenv": "0.0.1",
     "@types/node": "^18.11.17",
-    "execa": "^8.0.1",
-    "@botpress/common": "workspace:*"
+    "execa": "^8.0.1"
   }
 }
