feat: implement knowledge plugin

--- a/plugins/knowledge/package.json
+++ b/plugins/knowledge/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@botpresshub/personality",
+  "name": "@botpresshub/knowledge",
   "scripts": {
     "check:type": "tsc --noEmit",
     "build": "bp build",
